kube/common/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: kube-goal-app
  labels:
    name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
        - pathType: Prefix
          path: /api(/|$)(.*)
          backend:
            service:
              name: api-fastapi
              port: 
                number: 8000
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: client-react
              port: 
                number: 3000
